--- a/html/assets/css/style.css
+++ b/html/assets/css/style.css
@@ -56,8 +56,8 @@ h1{
     font-weight: 700;
 }
 h2{
-    font-size: 48px;
-    line-height: 56px;
+    font-size: 40px;
+    line-height: 50px;
     font-weight: 700;
 }
 h3{
@@ -1358,7 +1358,7 @@ html{
 }
 .testimonials_section .owl-carousel .owl-nav{
     display: block !important;
-    margin-top: 0;
+    margin-top: 30px;
     text-align: left;
 }
 .testimonials_section .owl-carousel .owl-nav button.owl-prev {
@@ -1778,7 +1778,7 @@ html{
 .copyright {
     padding: 15px 0;
 }
-.copyright p{
+.copyright p, .copyright a{
     color: var(--e-global-color-grayish-violet);
     font-weight: 400;
     font-size: 14px;
@@ -3683,6 +3683,9 @@ input[type="number"]::-webkit-calendar-picker-indicator {
     height: 60px;
     font-size: 30px;
     border-radius: 100px;
+}
+.outer_div.cart {
+    font-size: 25px;
 }
 .outer_div:hover {
     color: #fff;
