--- a/html/assets/css/style.css
+++ b/html/assets/css/style.css
@@ -778,11 +778,11 @@ html{
 }
 .store_section .store_box .store_image_box figure img {
     transition: all 0.3s ease-in-out;
-    width: 100%;
+    /* width: 100%;
     height: 100%;
     position: absolute;
     top: 0;
-    object-fit: cover;
+    object-fit: cover; */
 }
 .store_section .store_box .store_image_box figure img:hover {
     transform: translateY(-5px);
