--- a/wp/app/public/wp-content/themes/temastilodog/assets/css/mediaqueries.css
+++ b/wp/app/public/wp-content/themes/temastilodog/assets/css/mediaqueries.css
@@ -300,7 +300,20 @@
         width: 150px;
     }
 }
-
+@media (min-width: 992px) {
+    .navbar-nav .nav-item.contact_us a {
+        padding: 15px 45px 15px 40px;
+        font-weight: 600;
+        color: var(--e-global-color-white) !important;
+    }
+    .navbar-nav .nav-item.contact_us:hover {
+        background-color: var(--e-global-color-white);
+        color: var(--e-global-color-accent) !important;
+    }
+    .navbar-nav .contact_us:hover a {
+        color: var(--e-global-color-accent) !important;
+    }
+}
 @media screen and (max-width: 1199px){
     .main_header {
         padding: 15px 12px 0;
@@ -1257,7 +1270,7 @@
         position: absolute;
         right: 0px;
         width: 30%;
-        top: 55px;
+        top: 102px;
         z-index: 16;
         padding: 0;
         box-shadow: 0px 11px 54px 0px rgb(0 0 0 / 5%);
@@ -2648,7 +2661,7 @@
     }
     .navbar-collapse {
         width: 45%;
-        top: 52px;
+        top: 84px;
     }
     .navbar-brand img {
         width: 150px;
@@ -3506,7 +3519,7 @@
     }
     .navbar-collapse {
         width: 60%;
-        top: 50px;
+        top: 84px;
     }
     .navbar-nav .nav-item a {
         font-size: 14px;
