--- a/wp/app/public/wp-content/themes/temastilodog/assets/css/style.css
+++ b/wp/app/public/wp-content/themes/temastilodog/assets/css/style.css
@@ -3710,6 +3710,20 @@ input[type="number"]::-webkit-calendar-picker-indicator {
 }
 .outer_div.cart {
     font-size: 25px;
+    position: relative;
+}
+span.count-cart {
+    position: absolute;
+    background: #960496;
+    width: 30px;
+    height: 30px;
+    border-radius: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 16px;
+    top: -10px;
+    right: -8px;
 }
 .outer_div:hover {
     color: #fff;
