--- a/wp/app/public/wp-content/themes/temastilodog/assets/css/style.css
+++ b/wp/app/public/wp-content/themes/temastilodog/assets/css/style.css
@@ -3724,6 +3724,7 @@ span.count-cart {
     font-size: 16px;
     top: -10px;
     right: -8px;
+    color: #fff;
 }
 .outer_div:hover {
     color: #fff;
@@ -4377,10 +4378,340 @@ table.wc-block-cart-items .wc-block-cart-items__row .wc-block-components-product
     color: var(--e-global-color-accent) !important;
     text-decoration: none;
 }
+
+/* Cart */
+
+.grid-cart {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 auto 16px;
+    position: relative;
+}
+.grid-cart a {
+    color: #960496;
+}
+.grid-cart > form {
+    box-sizing: border-box;
+    margin: 0;
+    padding-right: 4.5283018868%;
+    width: 65%;
+}
+.woocommerce .grid-cart .cart-collaterals, .woocommerce-page.woocommerce-cart .cart-collaterals {
+    box-sizing: border-box;
+    margin: 0;
+    padding-left: 2.2641509434%;
+    width: 35%;
+}
+.woocommerce .grid-cart .cart-collaterals .cart_totals, .woocommerce-page.woocommerce-cart .cart-collaterals .cart_totals {
+    float: none;
+    width: 100%;
+}
+.woocommerce .grid-cart table.shop_table {
+    border: none;
+}
+.woocommerce .grid-cart .cart-collaterals .cart_totals h2 {
+    background: transparent;
+    border: 0;
+    border-radius: 0;
+    box-shadow: none;
+    color: inherit;
+    display: inline;
+    display: block;
+    font-family: inherit;
+    font-size: inherit;
+    font-size: .75em;
+    font-style: inherit;
+    font-weight: inherit;
+    font-weight: 700;
+    letter-spacing: inherit;
+    line-height: inherit;
+    margin: 0;
+    padding: 9px 12px;
+    text-align: left;
+    text-decoration: inherit;
+    text-transform: inherit;
+    text-transform: uppercase;
+    vertical-align: baseline;
+    border-bottom: 1px solid rgba(0, 0, 0, .1);
+}
+.woocommerce .grid-cart table.shop_table th {
+    font-family: inherit;
+    font-size: inherit;
+    font-size: .75em;
+    font-style: inherit;
+    font-weight: inherit;
+    font-weight: 700;
+    letter-spacing: inherit;
+    line-height: inherit;
+    text-transform: uppercase;
+}
+.woocommerce .grid-cart .cart-collaterals .cart_totals p {
+    font-size: .75em;
+}
+.woocommerce-cart .grid-cart .cart-collaterals .cart_totals table th {
+    width: 30%;
+    vertical-align: middle;
+}
+
+#add_payment_method .wc-proceed-to-checkout a.checkout-button, .woocommerce-cart .wc-proceed-to-checkout a.checkout-button, .woocommerce-checkout .wc-proceed-to-checkout a.checkout-button, :where(body:not(.woocommerce-block-theme-has-button-styles)) .woocommerce button.button:disabled, :where(body:not(.woocommerce-block-theme-has-button-styles)) .woocommerce button.button:disabled[disabled], .woocommerce .cart .button, .woocommerce .cart input.button, :where(body:not(.woocommerce-block-theme-has-button-styles)) .woocommerce button.button, .woocommerce .woocommerce-error .button, .woocommerce .woocommerce-info .button, .woocommerce .woocommerce-message .button, .woocommerce-page .woocommerce-error .button, .woocommerce-page .woocommerce-info .button, .woocommerce-page .woocommerce-message .button {
+    min-height: 3em !important;
+    align-items: center !important;
+    display: inline-flex !important;
+    height: auto !important;
+    justify-content: center !important;
+    position: relative !important;
+    text-align: center !important;
+    transition: box-shadow .1s linear !important;
+    padding: 10px 36px !important;
+    border-radius: 30px !important;
+    color: var(--e-global-color-white) !important;
+    background: var(--e-global-color-accent) !important;
+    border: 1px solid var(--e-global-color-accent) !important;
+    box-shadow: 0px 7px 22px 2px rgba(0, 0, 0, 0.08) !important;
+}
+.woocommerce #content table.cart td.actions .coupon .button, .woocommerce table.cart td.actions .coupon .button, .woocommerce-page #content table.cart td.actions .coupon .button, .woocommerce-page table.cart td.actions .coupon .button, .woocommerce-page table.cart td.actions .button, :where(body:not(.woocommerce-block-theme-has-button-styles)) .woocommerce button.button {
+    min-height: 2em !important;
+    font-size: 14px !important;
+    padding: 10px 20px !important;
+}
+.wc-proceed-to-checkout a.checkout-button.button.alt.wc-forward.disable-checkout-btn, :where(body:not(.woocommerce-block-theme-has-button-styles)) .woocommerce button.button:disabled, :where(body:not(.woocommerce-block-theme-has-button-styles)) .woocommerce button.button:disabled[disabled] {
+    opacity: .5 !important;
+}
+.woocommerce #content table.cart td.actions .input-text, .woocommerce table.cart td.actions .input-text, .woocommerce-page #content table.cart td.actions .input-text, .woocommerce-page table.cart td.actions .input-text {
+    width: 142px !important;
+}
+.select2-container--default .select2-selection--single .select2-selection__rendered, .woocommerce form .form-row input.input-text, .woocommerce form .form-row textarea {
+    text-align: left;
+    font-size: 14px;
+    width: 100%;
+    height: 30px;
+}
+.woocommerce form .form-row select, .woocommerce-page form .form-row select.select2-hidden-accessible, .woocommerce .grid-cart .cart-collaterals .cart_totals p, .woocommerce .grid-cart .cart-collaterals .cart_totals p span {
+    width: 100% !important;
+}
+.select2-container--default .select2-selection--single .select2-selection__arrow b {
+    left: unset !important;
+    right: 10px;
+}
+
+/* checkout */
+.woocommerce .col2-set .col-1 {
+    position: relative;
+
+    border-radius: 0;
+    max-width: 100%;
+	padding: 0;
+
+}
+.woocommerce .woocommerce-billing-fields__field-wrapper, .woocommerce .woocommerce-additional-fields__field-wrapper, .woocommerce-account-fields, .woocommerce .shipping_address {
+    padding: 30px 25px 35px 25px;
+}
+.woocommerce .col2-set .col-2 {
+    margin-top: 0;
+    padding: 0;
+    border-radius: 0;
+    max-width: 100%;
+}
+.woocommerce .col2-set .col-2 h3, .woocommerce .col2-set .col-1 h3, .woocommerce-account .woocommerce-MyAccount-content h3 {
+	color: #fff;
+	font-size: 32px;
+	font-weight: 400;
+	padding: 25px;
+}
+.woocommerce-account .woocommerce-MyAccount-content h3 {
+	padding: 0;
+}
+.woocommerce .col2-set .col-2 h3, .woocommerce .col2-set .col-1 h3 {
+	/* border: 1px solid #ebebeb; */
+	margin: 0;
+}
+.woocommerce form.checkout.woocommerce-checkout .col2-set input, .woocommerce-account .woocommerce-MyAccount-content input{
+	height: 40px;
+	border: 1px solid #ebebeb;
+    padding: 0 20px;
+    max-width: 100%;
+    background-color: #ffffff;
+    font-size: 14px;
+    color: #868686;
+    line-height: 40px;
+    border-radius: 0;
+    box-sizing: border-box;
+    width: 100%;
+    margin: 0;
+    outline: 0;
+    line-height: normal;
+}
+.woocommerce form.checkout.woocommerce-checkout .col2-set input[type="checkbox"] {
+	width: 12px;
+	height: 12px;
+}
+.woocommerce form .form-row {
+    display: block;
+    padding: 3px;
+    margin: 0 0 20px;
+}
+.woocommerce .woocommerce-billing-fields h3, .woocommerce .woocommerce-additional-fields h3 {
+    border: 0;
+    border-radius: 0;
+    font-size: 1.25em;
+    margin: 0 0 20px;
+    padding: 0;
+    vertical-align: baseline;
+    word-break: break-word;
+}
+td.product-total , th.product-total {
+    text-align: right;
+}
+table.shop_table.woocommerce-checkout-review-order-table td.product-name, table.shop_table.woocommerce-checkout-review-order-table th.product-name {
+	border-right: 0;
+}
+.woocommerce table.shop_table {
+	border-collapse: unset!important;
+}
+.woocommerce .select2-container--default .select2-selection--single .select2-selection__rendered {
+    color: var(--paragraph-color)!important;
+    line-height: 40px;
+}
+.woocommerce .select2-container--default .select2-selection--single {
+    background-color: #fff;
+    border: 1px solid rgba(0,0,0,.1);
+    border-radius: 0;
+    height: 40px;
+	padding: 0 20px;
+}
+.payment_method_rm-pagbank .ps-connect-buttons-container button.ps-button {
+    max-width: 4rem;
+}
+#payment div.payment_box .form-row {
+    margin: 0 !important;
+}
+.woocommerce form .form-row input.input-text, .woocommerce form .form-row textarea {
+    background-color: #fff;
+    border: 1px solid hsla(0, 0%, 7%, .5);
+    border-radius: 4px;
+    box-sizing: border-box;
+    color: #2b2d2f;
+    font-family: inherit;
+    font-size: 1em;
+    line-height: 1em;
+    margin: 0;
+    min-height: 0;
+    padding: 1em;
+    width: 100%;
+    font-size: 16px;
+}
+.woocommerce form .form-row label {
+    line-height: 2;
+    font-size: 15px;
+    margin-bottom: 0;
+    margin-top: 6px;
+}
+.woocommerce-billing-fields__field-wrapper, .woocommerce-account-fields {
+    position: relative;
+    padding: 0 !important;
+    margin-left: 30px;
+}
+.woocommerce-billing-fields__field-wrapper:after, .woocommerce-account-fields::after {
+    border-left: 1px solid hsla(0, 0%, 7%, .11);
+    content: "";
+    height: 100%;
+    left: -24px;
+    position: absolute;
+    top: 0;
+}
+.woocommerce form .show-password-input, .woocommerce-page form .show-password-input {
+    top: 4px !important;
+}
+.woocommerce form .form-row {
+    margin: 0 !important;
+}
+.woocommerce #payment .form-row select, .woocommerce-page #payment .form-row select {
+    font-size: 15px !important;
+    padding: 5px 5px;
+    color: #8a8097;
+}
+#add_payment_method #payment div.payment_box input.input-text, #add_payment_method #payment div.payment_box textarea, .woocommerce-cart #payment div.payment_box input.input-text, .woocommerce-cart #payment div.payment_box textarea, .woocommerce-checkout #payment div.payment_box input.input-text, .woocommerce-checkout #payment div.payment_box textarea, .woocommerce-privacy-policy-text p {
+    font-size: 15px !important;
+    line-height: 20px;
+}
+.woocommerce-checkout .woocommerce table.shop_table {
+    border: none;
+}
+.select2-container .select2-selection--single .select2-selection__rendered {
+	padding: 0!important;
+}
+.woocommerce form p.form-row#billing_country_field {
+    display: none;
+}
+.select2-dropdown, .select2-container--default .select2-search--dropdown .select2-search__field, .woocommerce form .form-row textarea {
+	border: 1px solid rgba(0,0,0,.1)!important;
+}
+.select2-search--dropdown input.select2-search__field {
+	margin: 0;
+}
+.woocommerce #payment #place_order, .woocommerce-page #payment #place_order {
+	width: 100%;
+    background-color: #333;
+    color: #fff;
+    display: inline-block;
+    padding: 20px 30px;
+    text-align: center;
+    -webkit-transition: all 0.3s ease-in;
+    -moz-transition: all 0.3s ease-in;
+    -o-transition: all 0.3s ease-in;
+    transition: all 0.3s ease-in;
+    font-weight: 700;
+    cursor: pointer;
+    border-radius: 0;
+    margin-top: 12px;
+}
+.grid-checkout {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 auto 16px;
+    position: relative;
+}
+.grid-checkout .left {
+    box-sizing: border-box;
+    margin: 0;
+    padding-right: 4.5283018868%;
+    width: 65%;
+}
+.grid-checkout .right {
+    box-sizing: border-box;
+    margin: 0;
+    padding-left: 2.2641509434%;
+    width: 35%;
+}
+.woocommerce form .form-row-first, .woocommerce-page form .form-row-first {
+    float: none;
+}
+
 @media (max-width: 991px) {
     .navbar-nav .nav-item.default-btn {
         background: none;
         border: none;
         box-shadow: none;
+    }
+}
+@media (max-width: 767px) {
+    .grid-cart > form, .grid-checkout .left {
+        padding-right: 0;
+        width: 100%;
+    }
+    .woocommerce .grid-cart .cart-collaterals, .woocommerce-page.woocommerce-cart .cart-collaterals, .grid-checkout .right {
+        padding-left: 0;
+        width: 100%;
+    }
+    .woocommerce #content table.cart td.actions .coupon .button, .woocommerce table.cart td.actions .coupon .button, .woocommerce-page #content table.cart td.actions .coupon .button, .woocommerce-page table.cart td.actions .coupon .button, .woocommerce-page table.cart td.actions .button {
+        min-height: 2em !important;
+        font-size: 12px !important;
+        padding: 10px 10px !important;
+    }
+    .woocommerce form .form-row-first, .woocommerce form .form-row-last, .woocommerce-page form .form-row-first, .woocommerce-page form .form-row-last {
+        width: 100% !important;
+    }
+    .grid-checkout .right {
+        margin-top: 50px;
     }
 }
