--- a/wp/app/public/wp-content/themes/temastilodog/assets/css/style.css
+++ b/wp/app/public/wp-content/themes/temastilodog/assets/css/style.css
@@ -1785,7 +1785,7 @@ html{
     line-height: 12px;
 }
 .middle-portion li a:hover{
-    color: var(--e-global-color-accent);
+    color: #fff;
 }
 .middle-portion .links_col li:hover a, .middle-portion .links_col li:hover{
     color: var(--e-global-color-accent);
@@ -4714,4 +4714,9 @@ table.shop_table.woocommerce-checkout-review-order-table td.product-name, table.
     .grid-checkout .right {
         margin-top: 50px;
     }
+}
+
+.qib-button-wrapper .quantity input.input-text.qty.text {
+    font-size: 16px !important;
+    border-radius: 0 !important;
 }
